Bug 1704;unsatisfied link error with libdb_java42.dll when launching chandler after building from the source;r=vajda
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3044 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/PyLucene/patches-0.5.1
+++ b/external/PyLucene/patches-0.5.1
@@ -54,3 +54,12 @@
  
  $(BINDIR)/db_const.o:
  	$(JCC) -C -d $(CLASSES) $(DB_CONST)
+@@ -364,7 +373,7 @@
+ ifeq ($(OS),Cygwin)
+ install::
+ ifdef DB
+-	install $(LIBDB_JAVA_LIB) $(PREFIX_DB)/build_win32/$(BINDIR)
++	install $(LIBDB_JAVA_LIB) $(PREFIX)/bin
+ endif
+ endif
+ endif
