--- a/chandler/HISTORY.txt
+++ b/chandler/HISTORY.txt
@@ -1,6 +1,14 @@
                             Chandler Release History
 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+Milestone 0.3.22 (CVS tag CHANDLER_0_3_23) 2004-08-24
+    * Receive IMAP email over SSL
+    * Send email with SMTP over SSL
+    * Manual sharing via WebDAV server
+    * Performance improvements
+    * Lots of work gone into making UI work
+    * Query support
+
 Milestone 0.3.22 (CVS tag CHANDLER_0_3_22) 2004-08-10
     * SMTP module added for mail
     * Refactored mail messaging logic by moving imap specific code in to 
