Prepare for 0.3.24 milestone release.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3413 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/chandler/HISTORY.txt
+++ b/chandler/HISTORY.txt
@@ -1,6 +1,12 @@
                             Chandler Release History
 
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+Milestone 0.3.24 (CVS tag CHANDLER_0_3_24) 2004-09-09
+    * Improvements in calendar, detail view
+    * Improvements in sharing
+    * Preferences dialogs
+    * And of course several repository improvements
+
 Milestone 0.3.23 (CVS tag CHANDLER_0_3_23) 2004-08-24
     * Receive IMAP email over SSL
     * Send email with SMTP over SSL
