--- a/external/PyLucene/patches-0.8.2
+++ b/external/PyLucene/patches-0.8.2
@@ -1,50 +1,6 @@
---- PyLucene-0.8.2/Makefile	Tue Nov  2 11:08:16 2004
-+++ PyLucene-0.8.2-patched/Makefile	Sun Nov  7 11:43:36 2004
-@@ -97,59 +97,63 @@
- BINDIR=debug
- else
- COMP_OPT=
- SUFFIX=
- _SUFFIX=
- BINDIR=release
- endif
- 
-+SWIG_OPT=-DSWIG_COBJECT_TYPES
-+
- JCCFLAGS=--encoding=UTF-8
- #JCCFLAGS=--encoding=UTF-8 -findirect-dispatch
- 
- ifeq ($(OS),Darwin)
- PYTHON_SITE=$(PREFIX_PYTHON)/lib/python$(PYTHON_VER)/site-packages
- PYTHON_INC=$(PREFIX_PYTHON)/include/python$(PYTHON_VER)
- PYLUCENE_LIB=$(BINDIR)/_PyLucene.so
- LIBDB_JAVA_LIB=$(BINDIR)/libdb_java-4.2.jnilib
- ifeq ($(DEBUG),1)
- CCFLAGS=-O0 -g
- LDFLAGS=-g
- else
--CCFLAGS=-O3
-+CCFLAGS=-O2
- LDFLAGS=
- endif
- else
- 
- ifeq ($(OS),Linux)
- PYTHON_SITE=$(PREFIX_PYTHON)/lib/python$(PYTHON_VER)/site-packages
- PYTHON_INC=$(PREFIX_PYTHON)/include/python$(PYTHON_VER)
- PYLUCENE_LIB=$(BINDIR)/_PyLucene.so
- LIBDB_JAVA_LIB=$(BINDIR)/libdb_java-4.2.so
- ifeq ($(DEBUG),1)
- CCFLAGS=-O0 -g -fPIC
- LDFLAGS=-g
- else
--CCFLAGS=-O3 -fPIC
-+CCFLAGS=-O2 -fPIC
- LDFLAGS=
- endif
- else
- 
- ifeq ($(OS),Cygwin)
+--- PyLucene-0.8.2/Makefile	Sun Nov  7 16:06:15 2004
++++ PyLucene-0.8.2-patched/Makefile	Sun Nov  7 16:19:25 2004
+@@ -139,19 +139,21 @@
  PYTHON_SITE=`cygpath -aw $(PREFIX_PYTHON)/Lib/site-packages`
  PYTHON_INC=`cygpath -aw $(PREFIX_PYTHON)/Include`
  PYTHON_PC=`cygpath -aw $(PREFIX_PYTHON)/PC`
@@ -55,8 +11,7 @@
  LDFLAGS=-g
 +PYDBG=-DPy_TRACE_REFS
  else
--CCFLAGS=-O3
-+CCFLAGS=-O2
+ CCFLAGS=-O2
  LDFLAGS=
 +PYDBG=
  endif
@@ -67,7 +22,7 @@
  endif
  endif
  endif
-@@ -219,23 +223,23 @@
+@@ -221,17 +223,17 @@
  
  ifeq ($(OS),Cygwin)
  DB_SRCS=`find $(DB)/java/src/com/sleepycat/db -regex '.*/db/[^/]*java' -exec cygpath -aw {} \;` 
@@ -83,35 +38,10 @@
  STORE_SRCS=`find store-$(LUCENE_VER) -name '*.java' -print`
  OBJS:=$(BINDIR)/store.o $(BINDIR)/db_const.o $(BINDIR)/db.o $(OBJS)
  LIBS:=$(LIBDB_JAVA_LIB) $(LIBS)
--SWIG_OPT=-D_WITH_DB_DIRECTORY=1
-+SWIG_OPT:=$(SWIG_OPT) -D_WITH_DB_DIRECTORY=1
+ SWIG_OPT:=$(SWIG_OPT) -D_WITH_DB_DIRECTORY=1
  
  $(BINDIR)/db_const.o:
- 	$(JCC) $(JCCFLAGS) -C -d $(CLASSES) $(DB_CONST)
- 	$(JCC) -fjni $(JCCFLAGS) $(CCFLAGS) -c -o $(BINDIR)/db_const.o $(DB_CONST)
- 
- $(BINDIR)/db.o: $(BINDIR)/db_const.o
- 	$(JCC) $(JCCFLAGS) -C -d $(CLASSES) --classpath=$(CLASSES) $(DB_SRCS)
- 	$(JCC) -fjni $(JCCFLAGS) $(CCFLAGS) -c -o $(BINDIR)/db.o --classpath=$(CLASSES) $(DB_SRCS)
-@@ -263,17 +267,16 @@
- 
- $(BINDIR)/store.o: $(BINDIR)/db.o $(BINDIR)/lucene.o
- 	$(JCC) -C -d $(CLASSES) --classpath=$(PYLUCENE_CP) $(STORE_SRCS)
- 	$(JCC) -fjni $(CCFLAGS) -c -o $(BINDIR)/store.o --classpath=$(PYLUCENE_CP) $(STORE_SRCS)
- 
- else
- 
- DISTRIB=PyLucene-$(VERSION)
--SWIG_OPT=
- DB_INC=
- 
- endif
- 
- ifeq ($(OS),Cygwin)
- _lucene=`cygpath -aw $(LUCENE)`
- else
- _lucene=$(LUCENE)
-@@ -532,16 +535,19 @@
+@@ -533,16 +535,19 @@
  
  
  all: env sources $(BINDIR) $(LIBS)
@@ -131,7 +61,7 @@
  	install libdb_java-4.2.la.osx $(PREFIX_DB)/lib/libdb_java-4.2.la
  endif
  	install $(GCJ_HOME)/lib/libgcj.5.dylib $(PREFIX)/lib
-@@ -549,22 +555,25 @@
+@@ -550,22 +555,25 @@
  	install $(GCJ_HOME)/lib/libgcc_s.1.0.dylib $(PREFIX)/lib
  else
  
@@ -159,7 +89,7 @@
  clean:
  	rm -rf $(BINDIR) PyLucene.py* PyLucene_wrap.cxx
 --- PyLucene-0.8.2/PyLucene.i	Tue Nov  2 17:56:44 2004
-+++ PyLucene-0.8.2-patched/PyLucene.i	Tue Nov  2 18:07:40 2004
++++ PyLucene-0.8.2-patched/PyLucene.i	Sun Nov  7 16:20:05 2004
 @@ -2359,16 +2359,37 @@
  #endif
  
