--- a/external/PyLucene/patches-0.9.2
+++ b/external/PyLucene/patches-0.9.2
@@ -79,7 +79,7 @@
  install::
  ifdef DB
 -	install $(LIBDB_JAVA_LIB) $(PREFIX_DB)/build_win32/$(BINDIR)
-+	install $(LIBDB_JAVA_LIB) $(PREFIX_DB)/bin
++	install $(LIBDB_JAVA_LIB) $(PREFIX)/bin
  endif
  endif
  endif
