--- a/external/python/patches-2.4
+++ b/external/python/patches-2.4
@@ -1,6 +1,11 @@
---- Python-2.3.4/Mac/OSX/Makefile	Tue Nov  4 14:45:16 2003
-+++ Python-2.3.4-patched/Mac/OSX/Makefile	Thu Mar 11 00:55:56 2004
-@@ -58,8 +58,7 @@
+--- Python-2.4/Mac/OSX/Makefile	Thu Nov 18 13:54:59 2004
++++ Python-2.4-patched/Mac/OSX/Makefile	Thu Nov 18 13:55:18 2004
+@@ -54,18 +54,17 @@
+ 	Resources/English.lproj/Documentation/doc \
+ 	Resources/English.lproj/Documentation/ide
+ DOCDIR=$(srcdir)/Mac/OSXResources/app/Resources/English.lproj/Documentation
+ DOCINDEX=$(DOCDIR)/"Documentation idx"
+ CACHERSRC=$(srcdir)/Mac/scripts/cachersrc.py
  compileall=$(srcdir)/Lib/compileall.py
  bundlebuilder=$(srcdir)/Lib/plat-mac/bundlebuilder.py
  
@@ -10,15 +15,24 @@
  
  install_PythonLauncher:
  	cd $(srcdir)/Mac/OSX/PythonLauncher/PythonLauncher.pbproj ; \
---- Python-2.3.4/PC/getpathp.c	Mon Aug 18 10:54:10 2003
-+++ Python-2.3.4-patched/PC/getpathp.c	Thu Mar 11 10:45:08 2004
-@@ -479,8 +479,14 @@
+ 	$(PBXBUILD) -target PythonLauncher -buildstyle Deployment install \
+ 		DSTROOT=$(DESTDIR)/ INSTALL_PATH=$(PYTHONAPPSPATH)
+ 
+ install_Python:
+ 	@if test ! -f $(DOCINDEX); then \
+--- Python-2.4/PC/getpathp.c	Sat Aug  7 12:12:27 2004
++++ Python-2.4-patched/PC/getpathp.c	Thu Nov 18 14:00:18 2004
+@@ -484,18 +484,23 @@
+ 		zip_path[len-2] = 'i';
+ 		zip_path[len-1] = 'p';
+ 	}
+ 	else {
+ 		zip_path[0] = 0;
  	}
   
  	skiphome = pythonhome==NULL ? 0 : 1;
 -	machinepath = getpythonregpath(HKEY_LOCAL_MACHINE, skiphome);
 -	userpath = getpythonregpath(HKEY_CURRENT_USER, skiphome);
-+
 +#if 0
 +        /* Chandler doesn't want to grab registry info because we want to
 +         * ignore extensions that the user already has installed.
@@ -29,9 +43,19 @@
  	/* We only use the default relative PYTHONPATH if we havent
  	   anything better to use! */
  	skipdefault = envpath!=NULL || pythonhome!=NULL || \
---- Python-2.3.4/Lib/distutils/sysconfig.py	Mon Feb 10 06:02:33 2003
-+++ Python-2.3.4-patched/Lib/distutils/sysconfig.py	Tue Mar 16 14:39:57 2004
-@@ -149,6 +149,19 @@
+ 		      machinepath!=NULL || userpath!=NULL;
+ #endif
+ 
+ 	/* We need to construct a path from the following parts.
+ 	   (1) the PYTHONPATH environment variable, if set;
+--- Python-2.4/Lib/distutils/sysconfig.py	Wed Oct 13 08:54:16 2004
++++ Python-2.4-patched/Lib/distutils/sysconfig.py	Thu Nov 18 14:04:29 2004
+@@ -144,16 +144,29 @@
+ 
+     Mainly needed on Unix, so we can plug in the information that
+     varies across Unices and is stored in Python's Makefile.
+     """
+     if compiler.compiler_type == "unix":
          (cc, cxx, opt, basecflags, ccshared, ldshared, so_ext) = \
              get_config_vars('CC', 'CXX', 'OPT', 'BASECFLAGS', 'CCSHARED', 'LDSHARED', 'SO')
  
@@ -51,65 +75,14 @@
          if os.environ.has_key('CC'):
              cc = os.environ['CC']
          if os.environ.has_key('CXX'):
---- Python-2.3.4/Lib/distutils/command/build_ext.py	Tue Nov 19 05:12:28 2002
-+++ Python-2.3.4-patched/Lib/distutils/command/build_ext.py	Wed Oct 13 22:27:02 2004
-@@ -81,6 +81,10 @@
-          "specify the compiler type"),
-         ('swig-cpp', None,
-          "make SWIG create C++ files (default is C)"),
-+        ('swig-opts=', None,
-+         "list of SWIG command line options"),
-+        ('swig=', None,
-+         "path to the SWIG executable"),
-         ]
- 
-     boolean_options = ['inplace', 'debug', 'force', 'swig-cpp']
-@@ -108,7 +112,8 @@
-         self.force = None
-         self.compiler = None
-         self.swig_cpp = None
--
-+        self.swig_opts = None
-+        self.swig = None
- 
-     def finalize_options (self):
-         from distutils import sysconfig
-@@ -205,6 +210,11 @@
-         if self.undef:
-             self.undef = string.split(self.undef, ',')
- 
-+        if self.swig_opts is None:
-+            self.swig_opts = []
-+        else:
-+            self.swig_opts = self.swig_opts.split(' ')
-+
-     # finalize_options ()
- 
- 
-@@ -509,7 +519,7 @@
-         # source -- but there should be an option to put SWIG output in
-         # the temp dir.
- 
--        if self.swig_cpp:
-+        if self.swig_cpp or '-c++' in self.swig_opts:
-             target_ext = '.cpp'
-         else:
-             target_ext = '.c'
-@@ -526,8 +536,9 @@
-         if not swig_sources:
-             return new_sources
- 
--        swig = self.find_swig()
--        swig_cmd = [swig, "-python"]
-+        swig = self.swig or self.find_swig()
-+        swig_cmd = [swig, '-python']
-+        swig_cmd.extend(self.swig_opts)
-         if self.swig_cpp:
-             swig_cmd.append("-c++")
- 
---- Python-2.3.4/Modules/_bsddb.c	Sun Sep 21 16:10:23 2003
-+++ Python-2.3.4-patched/Modules/_bsddb.c	Mon Nov 15 18:14:40 2004
-@@ -417,17 +417,17 @@
+             cxx = os.environ['CXX']
+         if os.environ.has_key('LDSHARED'):
+             ldshared = os.environ['LDSHARED']
+         if os.environ.has_key('CPP'):
+             cpp = os.environ['CPP']
+--- Python-2.4/Modules/_bsddb.c	Fri Sep  3 18:36:59 2004
++++ Python-2.4-patched/Modules/_bsddb.c	Thu Nov 18 14:08:09 2004
+@@ -461,17 +461,17 @@
      d->doff = (unsigned int) doff;
      return 1;
  }
@@ -128,7 +101,7 @@
  /* make a nice exception object to raise for errors. */
  static int makeDBError(int err)
  {
-@@ -1982,17 +1982,17 @@
+@@ -2141,17 +2141,17 @@
  
  
      if (!PyArg_ParseTuple(args, "|i:stat", &flags))
@@ -147,7 +120,7 @@
  
      self->haveStat = 1;
  
-@@ -2244,17 +2244,17 @@
+@@ -2403,17 +2403,17 @@
  
      if (self->haveStat) {  /* Has the stat function been called recently?  If
                                so, we can use the cached value. */
@@ -166,7 +139,7 @@
      if (err)
          return -1;
  
-@@ -4522,19 +4522,20 @@
+@@ -4898,19 +4898,20 @@
  #endif
  
      ADD_INT(d, DB_LOCK_NOWAIT);
@@ -188,10 +161,10 @@
  #endif
  
      ADD_INT(d, DB_ARCH_ABS);
---- Python-2.3.4/setup.py	Tue Oct 21 13:01:21 2003
-+++ Python-2.3.4-patched/setup.py	Mon Nov 15 18:42:08 2004
-@@ -511,16 +511,25 @@
-                                 '/usr/local/BerkeleyDB.3.1/include',
+--- Python-2.4/setup.py	Wed Oct 13 08:54:16 2004
++++ Python-2.4-patched/setup.py	Thu Nov 18 14:09:48 2004
+@@ -521,16 +521,25 @@
+                                 '/usr/local/BerkeleyDB.3.2/include',
                                  '/usr/local/include/db3',
                                  '/opt/sfw/include/db3',
                                  '/sw/include/db3',
@@ -216,7 +189,7 @@
          try:
              # See whether there is a Sleepycat header in the standard
              # search path.
-@@ -535,17 +544,17 @@
+@@ -545,17 +554,17 @@
              for dbkey in db_search_order:
                  dbd = db_try_this[dbkey]
                  for dblib in dbd['libs']:
@@ -235,7 +208,7 @@
          except found:
              dblibs = [dblib]
              # A default source build puts Berkeley DB in something like
-@@ -561,16 +570,17 @@
+@@ -571,16 +580,17 @@
                                    runtime_library_dirs=dblib_dir,
                                    include_dirs=db_incs,
                                    libraries=dblibs))
@@ -253,49 +226,3 @@
          # underlying db library.  May BSD-ish Unixes incorporate db 1.85
          # symbols into libc and place the include file in /usr/include.
          f = "/usr/include/db.h"
---- Python-2.3.4/Modules/threadmodule.c	Mon Jun 16 11:51:28 2003
-+++ Python-2.3.4-patched/Modules/threadmodule.c	Wed Nov 24 18:25:16 2004
-@@ -167,21 +167,20 @@
- 	PyObject *args;
- 	PyObject *keyw;
- };
- 
- static void
- t_bootstrap(void *boot_raw)
- {
- 	struct bootstate *boot = (struct bootstate *) boot_raw;
--	PyThreadState *tstate;
-+	PyGILState_STATE gstate;
- 	PyObject *res;
- 
--	tstate = PyThreadState_New(boot->interp);
--	PyEval_AcquireThread(tstate);
-+	gstate = PyGILState_Ensure();
- 	res = PyEval_CallObjectWithKeywords(
- 		boot->func, boot->args, boot->keyw);
- 	if (res == NULL) {
- 		if (PyErr_ExceptionMatches(PyExc_SystemExit))
- 			PyErr_Clear();
- 		else {
- 			PyObject *file;
- 			PySys_WriteStderr(
-@@ -196,18 +195,17 @@
- 		}
- 	}
- 	else
- 		Py_DECREF(res);
- 	Py_DECREF(boot->func);
- 	Py_DECREF(boot->args);
- 	Py_XDECREF(boot->keyw);
- 	PyMem_DEL(boot_raw);
--	PyThreadState_Clear(tstate);
--	PyThreadState_DeleteCurrent();
-+	PyGILState_Release(gstate);
- 	PyThread_exit_thread();
- }
- 
- static PyObject *
- thread_PyThread_start_new_thread(PyObject *self, PyObject *fargs)
- {
- 	PyObject *func, *args, *keyw = NULL;
- 	struct bootstate *boot;
