--- a/external/PyLucene/patches-0.9.2
+++ b/external/PyLucene/patches-0.9.2
@@ -1,5 +1,5 @@
---- PyLucene-0.9.2/Makefile	Mon Nov 15 21:22:42 2004
-+++ PyLucene-0.9.2-patched/Makefile	Mon Nov 15 21:36:58 2004
+--- PyLucene-0.9.2/Makefile	Thu Nov 18 14:17:54 2004
++++ PyLucene-0.9.2-patched/Makefile	Tue Nov 30 14:14:52 2004
 @@ -138,19 +138,21 @@
  ifeq ($(OS),Cygwin)
  PYTHON_SITE=`cygpath -aw $(PREFIX_PYTHON)/Lib/site-packages`
@@ -41,7 +41,39 @@
  SWIG_OPT:=$(SWIG_OPT) -D_WITH_DB_DIRECTORY=1 -DDB_LIB_VER="'$(DB_LIB_VER)'" 
  
  $(BINDIR)/db.o:
-@@ -620,16 +622,19 @@
+@@ -296,17 +298,17 @@
+ ifeq ($(OS),Cygwin)
+ DB_SRCS=`find $(DB)/java/src/com/sleepycat/db -regex '.*/db/[^/]*java' -exec cygpath -aw {} \;` 
+ DB_CONST=`cygpath -aw $(DB)/java/src/com/sleepycat/db/$(BINDIR)/DbConstants.java`
+ DB_INC=-I`cygpath -aw $(PREFIX_DB)` -I`cygpath -aw $(PREFIX_DB)/dbinc` -I`cygpath -aw $(PREFIX_DB)/build_win32`
+ PYLUCENE_CP:=`cygpath -awp $(PYLUCENE_CP)`
+ else
+ DB_SRCS=`find $(DB)/java/src/com/sleepycat/db -regex '.*/db/[^/]*java'`
+ DB_CONST=$(DB)/java/src/com/sleepycat/db/$(BINDIR)/DbConstants.java
+-DB_INC=-I$(PREFIX_DB)/include -I$(DB) -I$(DB)/build_unix
++DB_INC=-I$(PREFIX_DB)/include -I$(DB) -I$(DB)/$(BUILD_DB)
+ endif
+ 
+ STORE_SRCS=`find store-$(LUCENE_VER) -name '*.java' -print`
+ OBJS:=$(BINDIR)/store.o $(BINDIR)/db_const.o $(BINDIR)/db.o $(OBJS)
+ LIBS:=$(LIBDB_JAVA_LIB) $(LIBS)
+ SWIG_OPT:=$(SWIG_OPT) -D_WITH_DB_DIRECTORY=1 -DDB_LIB_VER="'$(DB_LIB_VER)'"
+ 
+ $(BINDIR)/db_const.o:
+@@ -608,28 +610,31 @@
+ ifeq ($(OS),Linux)
+ $(PYLUCENE_LIB): $(OBJS) PyLucene_wrap.cxx
+ 	$(CXX) -shared -o $@ $(CCFLAGS) $(SWIG_OPT) $(DB_INC) -I$(CLASSES) -I$(PYTHON_INC) PyLucene_wrap.cxx $(OBJS) -lgcj
+ else
+ 
+ ifeq ($(OS),Cygwin)
+ $(PYLUCENE_LIB): $(OBJS) PyLucene_wrap.cxx
+ 	$(CXX) -c $(CCFLAGS) $(PYDBG) -D_NO_OLDNAMES -D_off_t=off_t $(SWIG_OPT) $(DB_INC) -I$(CLASSES) -I$(PYTHON_PC) -I$(PYTHON_INC) -o $(BINDIR)/PyLucene_wrap.o PyLucene_wrap.cxx
+-	$(CXX) -shared $(LDFLAGS) -o $@ $(OBJS) `cygpath -aw $(PREFIX_PYTHON)/python23$(_SUFFIX).dll` $(BINDIR)/PyLucene_wrap.o -lgcj -lwin32k -lws2_32
++	$(CXX) -shared $(LDFLAGS) -o $@ $(OBJS) `cygpath -aw $(PREFIX_PYTHON)/python$(subst .,,$(PYTHON_VER))$(_SUFFIX).dll` $(BINDIR)/PyLucene_wrap.o -lgcj -lwin32k -lws2_32
+ endif
+ endif
+ endif
  
  
  all: env sources $(BINDIR) $(LIBS)
@@ -88,11 +120,11 @@
  
  clean:
  	rm -rf $(BINDIR) PyLucene.py* PyLucene_wrap.cxx
---- PyLucene-0.9.2/PyLucene.i	Mon Nov 15 19:49:36 2004
-+++ PyLucene-0.9.2-patched/PyLucene.i	Mon Nov 15 21:37:24 2004
-@@ -2381,16 +2381,37 @@
- #endif
+--- PyLucene-0.9.2/PyLucene.i	Thu Nov 18 14:17:54 2004
++++ PyLucene-0.9.2-patched/PyLucene.i	Tue Nov 30 14:15:40 2004
+@@ -2418,16 +2418,36 @@
  
+     nextThread = new java::lang::Thread();
      objects = new java::util::Hashtable();
  
      java::util::Hashtable *props = (java::util::Hashtable *)
@@ -111,7 +143,6 @@
 +        if (l > 13 && !strcmp(p + l - 13, "site-packages"))
 +        {
 +            jstring jp = JvNewStringUTF(p);
-+
 +            props->put(JvNewStringUTF("gnu.classpath.home.url"),
 +                       JvNewStringUTF("file:")->concat(jp->replace('\\','/')));
 +            break;
