- Tweaked vobject to make export to iCalendar easier
git-svn-id: http://svn.osafoundation.org/chandler/trunk@4234 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/vobject/patches2-0.1
+++ b/external/vobject/patches2-0.1
@@ -11,3 +11,15 @@ Index: parsing.py
                    "exrule"          : parseRecur,
                    "rdate"           : deUnicode(parseRdate),
                    "rrule"           : parseRecur,
+Index: vobject.py
+===================================================================
+--- vobject-0.1/vobject/vobject.py	(revision 70)
++++ vobject-0.1/vobject/vobject.py	(working copy)
+@@ -316,6 +316,7 @@
+             except (KeyError, AttributeError):
+                 obj = ContentLine(objOrName, [], '') 
+         self.contents.setdefault(obj.name.lower(), []).append(obj)
++        return obj
+ 
+     def getChildren(self):
+         for objList in self.contents.values():
